--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Alert----Java Script</title>
 </head>
 <body>
-  <h1>Hi! This is Faraz Shams</h1>  
-
+  <h1>Hi! <br>
+    This is Faraz Shams</h1>  
+<h4>Welcome To My First JavaScript Class  </h4>
 
 
 
